difference between source and lens animation + combined two sim csvs

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,19 @@ Sim 13.csv
 Sim 14.csv
 
 .DS_Store
+
+Sim 15.csv
+
+Sim 16.csv
+
+Sim 17.csv
+
+Sim 18.csv
+
+Sim 19.csv
+
+Sim 20.csv
+
+Sim 21.csv
+
+System 1 Combined_combined.csv
